# TDD_Rediscovered_ProgrammerTests

conway/: README.md  pyproject.toml
conway/src/conway/: __init__.py  board.py  board_writer.py  cli.py  game.py  game_of_life.py  seed.txt  seed_reader.py
conway/tests/: test_game.py  test_game_of_life.py
