[tool.poetry]
name = "conway"
version = "0.1.0"
description = "showing how to write programmer not unit tests"
authors = ["iancooper <ian_hammond_cooper@yahoo.co.uk>"]

packages = [
    { include = "conway", from = "src"}
]

[tool.poetry.dependencies]
python = "3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
